@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -122,7 +122,7 @@ public class ConvertingComparatorTests {
 
 		@Override
 		public Integer convert(String source) {
-			return new Integer(source);
+			return Integer.valueOf(source);
 		}
 
 	}
